--- a/6_object_wrap/nan/package.json
+++ b/6_object_wrap/nan/package.json
@@ -8,5 +8,8 @@
   "dependencies": {
     "bindings": "~1.5.0",
     "nan": "^2.14.0"
+  },
+  "scripts": {
+    "build": "node-gyp --debug rebuild"
   }
 }
